--- a/css/main-content-styles.css
+++ b/css/main-content-styles.css
@@ -26,7 +26,7 @@ main{
 
 .flex-child4{
     width: 100%;
-    height: 50vh;
+    height: 45vh;
   } 
 
 .grid-container{
@@ -52,23 +52,7 @@ main{
         height: 50vh;
     }
 
-    .img{
-        width: 100%;
-        height: 300px;
-    }
-
-    .grid-container{
-        display: flex;
-        flex-direction: column;
-    }
-    
-    .grid-container> img{
-        width: 100%;
-        padding: 10px;
-    }
-
     .flex-child4{
-        width: 100%;
-        height: auto;
+      display: none;
     } 
 }
