--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,9 @@
 /*Desktop styles*/
 
+html, body{
+    overflow-x: hidden;
+}
+
 body{
     background: rgb(248, 239, 224);
     font-family: "Roboto", sans-serif;;
@@ -7,6 +11,7 @@ body{
     margin: 0;
     padding: 0;
     width: 100%;
+    position: relative;
     color: rgb(33, 33, 33);
 }
 
@@ -16,7 +21,6 @@ body{
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-    overflow: hidden;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -44,7 +48,6 @@ p{
 @media screen and (max-width: 768px) {
     .flex-container {
       width: 100%;
-      margin: 0px;
     }
   }
 
